--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         api-level: [31]
         target: [default]
-        arch: [x86_64]
+        arch: [arm64-v8a]
 
     steps:
       - name: Checkout
