--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - main
   pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -14,12 +16,11 @@ jobs:
     env:
       API_KEY: ${{ secrets.API_KEY }}
 
-
     strategy:
       matrix:
-        api-level: [31]
+        api-level: [30]  # Adjusted API level if necessary
         target: [default]
-        arch: [arm64-v8a]
+        arch: [armeabi-v7a]  # Changed from 'arm64-v8a' to 'armeabi-v7a'
 
     steps:
       - name: Checkout
@@ -49,7 +50,7 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-              
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
