--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -18,9 +18,9 @@ jobs:
 
     strategy:
       matrix:
-        api-level: [30]  # Adjusted API level if necessary
+        api-level: [30]  # Use API level 30 for better compatibility
         target: [default]
-        arch: [armeabi-v7a]  # Changed from 'arm64-v8a' to 'armeabi-v7a'
+        arch: [x86]  # Use x86 architecture
 
     steps:
       - name: Checkout
@@ -64,4 +64,4 @@ jobs:
           target: ${{ matrix.target }}
           arch: ${{ matrix.arch }}
           script: ./gradlew connectedAndroidTest -Pandroid.testInstrumentationRunnerArguments.systemProperty=IS_TESTING=true
-          emulator-options: -no-snapshot-load -no-window
+          emulator-options: -no-window -no-snapshot -gpu swiftshader_indirect
