--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         api-level: [30]  # Use API level 30 for better compatibility
-        target: [default]
+        target: [google_apis]
         arch: [x86]  # Use x86 architecture
 
     steps:
