--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,6 +13,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
+      GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -29,13 +33,30 @@ jobs:
           api-level: 31
           build-tools: 31.0.0
 
-      - name: Build Debug APK
+      - name: Cache Gradle packages
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Build Debug APK and Instrumentation Test APK
         run: ./gradlew assembleDebug assembleAndroidTest
 
       - name: Run Instrumentation Tests on Firebase Test Lab
         uses: wzieba/FirebaseTestLab@v2
         with:
-          project: ${{ secrets.FIREBASE_PROJECT_ID }}
-          serviceCredentialsJson: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-          debugApk: app/build/outputs/apk/debug/app-debug.apk
+          project: ${{ env.FIREBASE_PROJECT_ID }}
+          serviceCredentialsFileContents: ${{ env.GOOGLE_APPLICATION_CREDENTIALS }}
+          appApk: app/build/outputs/apk/debug/app-debug.apk
           testApk: app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk
+          deviceIds: Nexus6P
+          apiLevel: 27
+          locales: en
+          orientations: portrait
