--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,16 +11,10 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest  # Use macOS runner for hardware acceleration
 
     env:
       API_KEY: ${{ secrets.API_KEY }}
-
-    strategy:
-      matrix:
-        api-level: [30]  # Use API level 30 for better compatibility
-        target: [google_apis]
-        arch: [x86]  # Use x86 architecture
 
     steps:
       - name: Checkout
@@ -35,11 +29,8 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v2
         with:
-          api-level: ${{ matrix.api-level }}
-          target: ${{ matrix.target }}
-          arch: ${{ matrix.arch }}
-          profile: 'no'
-          channel: '0'
+          api-level: 30
+          build-tools: 30.0.3
 
       - name: Cache Gradle packages
         uses: actions/cache@v3
@@ -57,11 +48,12 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build -Pandroid.useAndroidX=true -Pandroid.enableJetifier=true
 
-      - name: Run Instrumentation Tests
+      - name: Start emulator
         uses: reactivecircus/android-emulator-runner@v2.32.0
         with:
-          api-level: ${{ matrix.api-level }}
-          target: ${{ matrix.target }}
-          arch: ${{ matrix.arch }}
+          api-level: 30
+          target: google_apis
+          arch: x86_64
+          profile: Nexus 6
+          emulator-options: -no-window -no-snapshot
           script: ./gradlew connectedAndroidTest -Pandroid.testInstrumentationRunnerArguments.systemProperty=IS_TESTING=true
-          emulator-options: -no-window -no-snapshot -gpu swiftshader_indirect
