--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,21 +17,25 @@ jobs:
       API_KEY: ${{ secrets.API_KEY }}
 
     steps:
+      # Step 1: Checkout code
       - name: Checkout
         uses: actions/checkout@v3
 
+      # Step 2: Set up JDK 17 (since you're using JDK 17)
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: '17'
 
+      # Step 3: Setup Android SDK with appropriate API and Build Tools
       - name: Setup Android SDK
         uses: android-actions/setup-android@v2
         with:
           api-level: 30
           build-tools: 30.0.3
 
+      # Step 4: Cache Gradle dependencies for faster builds
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
@@ -42,12 +46,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
+      # Step 5: Grant execute permissions to gradlew
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      # Step 6: Build the project using Gradle
       - name: Build with Gradle
         run: ./gradlew build -Pandroid.useAndroidX=true -Pandroid.enableJetifier=true
 
+      # Step 7: Start the emulator for running tests
       - name: Start emulator
         uses: reactivecircus/android-emulator-runner@v2.32.0
         with:
@@ -56,4 +63,7 @@ jobs:
           arch: arm64-v8a
           profile: Nexus 6
           emulator-options: -no-window -no-snapshot
-          script: ./gradlew connectedAndroidTest -Pandroid.testInstrumentationRunnerArguments.systemProperty=IS_TESTING=true
+
+      # Step 8: Run instrumented tests (UI tests) with Espresso
+      - name: Run connectedAndroidTest (UI Tests)
+        run: ./gradlew connectedAndroidTest -Pandroid.testInstrumentationRunnerArguments.systemProperty=IS_TESTING=true
