--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,13 +11,14 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest  # Use macOS runner for hardware acceleration
+    # Use macOS runner for hardware acceleration
+    runs-on: macos-latest
 
     env:
       API_KEY: ${{ secrets.API_KEY }}
 
     steps:
-      # Step 1: Checkout code
+      # Step 1: Checkout the repository code
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -28,7 +29,7 @@ jobs:
           distribution: 'zulu'
           java-version: '17'
 
-      # Step 3: Setup Android SDK with appropriate API and Build Tools
+      # Step 3: Set up Android SDK with appropriate API and build tools
       - name: Setup Android SDK
         uses: android-actions/setup-android@v2
         with:
@@ -54,8 +55,8 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build -Pandroid.useAndroidX=true -Pandroid.enableJetifier=true
 
-      # Step 7: Start the emulator for running tests
-      - name: Start emulator
+      # Step 7: Start the emulator and run UI tests
+      - name: Start emulator and run UI tests
         uses: reactivecircus/android-emulator-runner@v2.32.0
         with:
           api-level: 30
@@ -63,7 +64,4 @@ jobs:
           arch: arm64-v8a
           profile: Nexus 6
           emulator-options: -no-window -no-snapshot
-
-      # Step 8: Run instrumented tests (UI tests) with Espresso
-      - name: Run connectedAndroidTest (UI Tests)
-        run: ./gradlew connectedAndroidTest -Pandroid.testInstrumentationRunnerArguments.systemProperty=IS_TESTING=true
+          script: ./gradlew connectedAndroidTest -Pandroid.testInstrumentationRunnerArguments.systemProperty=IS_TESTING=true
