--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,8 +11,7 @@ on:
 jobs:
   build:
 
-    # Use macOS runner for hardware acceleration
-    runs-on: macos-latest
+    runs-on: macos-latest  # Use macOS runner for hardware acceleration
 
     env:
       API_KEY: ${{ secrets.API_KEY }}
@@ -63,5 +62,5 @@ jobs:
           target: google_apis
           arch: arm64-v8a
           profile: Nexus 6
-          emulator-options: -no-window -no-snapshot
+          emulator-options: -no-window -no-snapshot -gpu swiftshader_indirect
           script: ./gradlew connectedAndroidTest -Pandroid.testInstrumentationRunnerArguments.systemProperty=IS_TESTING=true
