--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -60,7 +60,7 @@ jobs:
         with:
           api-level: 30
           target: google_apis
-          arch: arm64-v8a
+          arch: x86_64  # Switch to x86_64 architecture
           profile: Nexus 6
           emulator-options: -no-window -no-snapshot -gpu swiftshader_indirect
           script: ./gradlew connectedAndroidTest -Pandroid.testInstrumentationRunnerArguments.systemProperty=IS_TESTING=true
