--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest  # Use macOS runner for hardware acceleration
+    runs-on: macos-latest  # Use macOS runner for Apple Silicon ARM architecture
 
     env:
       API_KEY: ${{ secrets.API_KEY }}
@@ -60,7 +60,7 @@ jobs:
         with:
           api-level: 30
           target: google_apis
-          arch: x86_64  # Switch to x86_64 architecture
+          arch: arm64-v8a  # Use ARM architecture for Apple Silicon
           profile: Nexus 6
           emulator-options: -no-window -no-snapshot -gpu swiftshader_indirect
           script: ./gradlew connectedAndroidTest -Pandroid.testInstrumentationRunnerArguments.systemProperty=IS_TESTING=true
