--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest  # Use macOS runner for Apple Silicon ARM architecture
+    runs-on: macos-latest  # Using macOS for hardware acceleration
 
     env:
       API_KEY: ${{ secrets.API_KEY }}
@@ -60,7 +60,16 @@ jobs:
         with:
           api-level: 30
           target: google_apis
-          arch: arm64-v8a  # Use ARM architecture for Apple Silicon
+          arch: x86  # Switching to x86 architecture for better compatibility with macOS/Intel
           profile: Nexus 6
           emulator-options: -no-window -no-snapshot -gpu swiftshader_indirect
+          disable-animations: true
           script: ./gradlew connectedAndroidTest -Pandroid.testInstrumentationRunnerArguments.systemProperty=IS_TESTING=true
+
+      # Optional: You can add a step to generate reports for test results, like uploading logs or test results to GitHub Actions artifacts
+      # Example (if you need it):
+      # - name: Upload Test Results
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: android-test-results
+      #     path: app/build/reports/androidTests/*
