--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest  # Using macOS for hardware acceleration
+    runs-on: macos-latest  # Using macOS, which might be Apple Silicon
 
     env:
       API_KEY: ${{ secrets.API_KEY }}
@@ -21,19 +21,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      # Step 2: Set up JDK 17 (since you're using JDK 17)
+      # Step 2: Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
           java-version: '17'
 
-      # Step 3: Set up Android SDK with appropriate API and build tools
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
-        with:
-          api-level: 30
-          build-tools: 30.0.3
+      # Step 3: Set up Android SDK manually
+      - name: Set up Android SDK
+        run: |
+          yes | sdkmanager --licenses
+          sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3" "system-images;android-30;google_apis;arm64-v8a" "emulator"
 
       # Step 4: Cache Gradle dependencies for faster builds
       - name: Cache Gradle packages
@@ -60,14 +59,11 @@ jobs:
         with:
           api-level: 30
           target: google_apis
-          arch: x86_64  # Switch to x86_64 for better compatibility with macOS/Intel
+          arch: arm64-v8a  # Use arm64-v8a for Apple Silicon compatibility
           profile: Nexus 6
           emulator-options: -no-window -no-snapshot -gpu swiftshader_indirect
           disable-animations: true
           script: ./gradlew connectedAndroidTest -Pandroid.testInstrumentationRunnerArguments.systemProperty=IS_TESTING=true
-          boot-timeout: 600  # Increase boot timeout to 10 minutes to avoid emulator boot failures
-          adb-channel-timeout: 180  # Increase ADB connection timeout for better stability
-          working-directory: android  # Optional, specify your Android project directory if needed
 
       # Optional: Upload Test Results to GitHub Actions artifacts
       - name: Upload Test Results
