--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,11 +28,18 @@ jobs:
           distribution: 'zulu'
           java-version: '17'
 
-      # Step 3: Set up Android SDK manually
-      - name: Set up Android SDK
+      # Step 3: Install Android SDK and add it to the PATH
+      - name: Install Android SDK
         run: |
-          yes | sdkmanager --licenses
-          sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3" "system-images;android-30;google_apis;arm64-v8a" "emulator"
+          export ANDROID_HOME=$HOME/Library/Android/sdk
+          mkdir -p $ANDROID_HOME
+          curl -o sdk-tools-macos.zip https://dl.google.com/android/repository/commandlinetools-mac-8092744_latest.zip
+          unzip sdk-tools-macos.zip -d $ANDROID_HOME/cmdline-tools
+          mv $ANDROID_HOME/cmdline-tools/cmdline-tools $ANDROID_HOME/cmdline-tools/tools
+          yes | $ANDROID_HOME/cmdline-tools/tools/bin/sdkmanager --licenses
+          $ANDROID_HOME/cmdline-tools/tools/bin/sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3" "system-images;android-30;google_apis;arm64-v8a" "emulator"
+        env:
+          ANDROID_HOME: ${{ secrets.ANDROID_HOME }}
 
       # Step 4: Cache Gradle dependencies for faster builds
       - name: Cache Gradle packages
