--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -34,7 +34,19 @@ jobs:
           distribution: 'zulu'
           java-version: '17'
 
-      # Step 4: Cache Gradle dependencies for faster builds
+      # Step 4: Set up Android SDK Command-line Tools
+      - name: Set up Android SDK Command-line Tools
+        run: |
+          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O commandlinetools.zip
+          sudo unzip -q commandlinetools.zip -d /usr/local/lib/android/sdk/cmdline-tools
+          sudo mv /usr/local/lib/android/sdk/cmdline-tools/cmdline-tools /usr/local/lib/android/sdk/cmdline-tools/latest
+          rm commandlinetools.zip
+
+      # Step 5: Accept Android SDK licenses
+      - name: Accept Android SDK licenses
+        run: yes | /usr/local/lib/android/sdk/cmdline-tools/latest/bin/sdkmanager --licenses
+
+      # Step 6: Cache Gradle dependencies for faster builds
       - name: Cache Gradle packages
         uses: actions/cache@v3
         with:
@@ -45,23 +57,25 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      # Step 5: Grant execute permissions to gradlew
+      # Step 7: Grant execute permissions to gradlew
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      # Step 6: Build the project using Gradle
+      # Step 8: Build the project using Gradle
       - name: Build with Gradle
         run: ./gradlew build -Pandroid.useAndroidX=true -Pandroid.enableJetifier=true
 
-      # Step 7: Start the emulator and run UI tests
+      # Step 9: Start the emulator and run UI tests
       - name: Start emulator and run UI tests
-        uses: reactivecircus/android-emulator-runner@v2
+        uses: reactivecircus/android-emulator-runner@v3.1.0
         with:
           api-level: 30
           target: google_apis
           arch: x86_64
           profile: Nexus 6
           disable-animations: true
+          disable-linux-hw-accel: true  # Disable hardware acceleration
+          emulator-options: -no-window -gpu swiftshader_indirect -no-snapshot -noaudio -no-boot-anim
           script: ./gradlew connectedAndroidTest -Pandroid.testInstrumentationRunnerArguments.systemProperty=IS_TESTING=true
 
       # Optional: Upload Test Results to GitHub Actions artifacts
