got edit profile page working shap

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,19 @@
 [versions]
+activityKtx = "1.9.2"
 agp = "8.5.1"
 androidxJunit = "1.1.5"
 androidxTestEspressoEspressoCore = "3.5.1"
 cardview = "1.0.0"
 compiler = "4.12.0"
+compilerVersion = "4.15.1"
 converterGson = "2.9.0"
 espressoContrib = "3.6.1"
 espressoIntents = "3.6.1"
 firebaseBomVersion = "33.3.0"
+firebaseStorage = "21.0.0"
+githubGlide = "4.15.1"
 glide = "4.12.0"
+googleMaterial = "1.9.0"
 hamcrestHamcrestLibrary = "2.2"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
@@ -36,6 +41,7 @@ idlingConcurrent = "3.6.1"
 viewpager2 = "1.1.0"
 
 [libraries]
+androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
 androidx-cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-espresso-contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "androidxTestEspressoEspressoCore" }
@@ -50,9 +56,12 @@ androidx-test-espresso-espresso-core-v351-x2 = { module = "androidx.test.espress
 androidx-viewpager2 = { module = "androidx.viewpager2:viewpager2", version.ref = "viewpager2" }
 com-google-firebase-firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "compiler" }
+compiler-v4151 = { module = "com.github.bumptech.glide:compiler", version.ref = "compilerVersion" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
+firebase-storage = { module = "com.google.firebase:firebase-storage", version.ref = "firebaseStorage" }
+github-glide-v4151 = { module = "com.github.bumptech.glide:glide", version.ref = "githubGlide" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 google-firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
 google-firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBomVersion" }
@@ -74,6 +83,7 @@ junit-junit = { group = "junit", name = "junit", version.ref = "junitJunit" }
 androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
 androidx-idling-concurrent = { group = "androidx.test.espresso.idling", name = "idling-concurrent", version.ref = "idlingConcurrent" }
 material-v150 = { module = "com.google.android.material:material", version.ref = "materialVersion" }
+material-v190 = { module = "com.google.android.material:material", version.ref = "googleMaterial" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 
