--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,6 +39,7 @@ junitJunit = "4.12"
 junitKtx = "1.2.1"
 idlingConcurrent = "3.6.1"
 viewpager2 = "1.1.0"
+biometricKtx = "1.1.0"
 
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
@@ -86,6 +87,7 @@ material-v150 = { module = "com.google.android.material:material", version.ref =
 material-v190 = { module = "com.google.android.material:material", version.ref = "googleMaterial" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+androidx-biometric-ktx = { group = "androidx.biometric", name = "biometric-ktx", version.ref = "biometricKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
