--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ activityKtx = "1.9.2"
 agp = "8.7.1"
 androidxJunit = "1.1.5"
 androidxTestEspressoEspressoCore = "3.5.1"
+biometric = "1.2.0-alpha05"
 cardview = "1.0.0"
 compiler = "4.12.0"
 compilerVersion = "4.15.1"
@@ -43,6 +44,7 @@ biometricKtx = "1.1.0"
 
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityKtx" }
+androidx-biometric = { module = "androidx.biometric:biometric", version.ref = "biometric" }
 androidx-cardview = { module = "androidx.cardview:cardview", version.ref = "cardview" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-espresso-contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "androidxTestEspressoEspressoCore" }
