--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ githubGlide = "4.15.1"
 glide = "4.12.0"
 googleMaterial = "1.9.0"
 hamcrestHamcrestLibrary = "2.2"
+json = "20210307"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -39,6 +40,7 @@ coreKtxVersion = "1.6.1"
 junitJunit = "4.12"
 junitKtx = "1.2.1"
 idlingConcurrent = "3.6.1"
+squareupOkhttpVersion = "4.9.3"
 viewpager2 = "1.1.0"
 biometricKtx = "1.0.1"
 
@@ -69,6 +71,7 @@ glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 google-firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
 google-firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBomVersion" }
 hamcrest-hamcrest-library = { module = "org.hamcrest:hamcrest-library", version.ref = "hamcrestHamcrestLibrary" }
+json = { module = "org.json:json", version.ref = "json" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -89,6 +92,7 @@ material-v190 = { module = "com.google.android.material:material", version.ref =
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 androidx-biometric-ktx = { group = "androidx.biometric", name = "biometric-ktx", version = "1.4.0-alpha02" }
+squareup-okhttp-v493 = { module = "com.squareup.okhttp3:okhttp", version.ref = "squareupOkhttpVersion" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
